--- a/Desafio01.ipynb
+++ b/Desafio01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_ = \"mlVIII\" #colocar o numero em romano"
+    "input_ = \"MLVIII\" #colocar o numero em romano"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,22 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1058"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O numero romano MLVIII em inteiro é 1058\n"
+     ]
     }
    ],
    "source": [
-    "resposta"
+    "print(\"O numero romano {} em inteiro é {}\".format(input_,resposta))"
    ]
   }
  ],
