--- a/desafio03.ipynb
+++ b/desafio03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,18 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cartas na mesa: ['3O', '2P', '9E', '8P', '9C']\n",
-      "Mão Robo1: ['7E', 'KE']\n",
-      "Mão Robo2: ['2E', '9P']\n",
-      "Melhor combinação robo 1: ('7E', 'KE', '3O', '9E', '9C') par.\n",
-      "Melhor combinação robo 2: ('2E', '9P', '2P', '9E', '9C') full house.Robo 2 ganhou\n"
+      "Cartas na mesa: ['8C', '7P', 'KP', 'QP', '9P']\n",
+      "Mão Robo1: ['JP', '5C']\n",
+      "Mão Robo2: ['10O', '7C']\n",
+      "Melhor combinação robo 1: ('JP', '7P', 'KP', 'QP', '9P') flush.\n",
+      "Melhor combinação robo 2: ('10O', '7C', '8C', '7P', 'KP') par.\n",
+      "Robo 1 ganhou\n"
      ]
     }
    ],
@@ -163,8 +164,8 @@
     "tc_robo1 = cartas_robo1+cartas_mesa\n",
     "tc_robo2 = cartas_robo2+cartas_mesa\n",
     "\n",
-    "#combinacoes das cartas dos robôs\n",
-    "c1 = list(combinations(tc_robo1, 5))\n",
+    "#combinacoes das cartas dos robôs (função recebe um array com valores e o tamanho que queremos a combinação)\n",
+    "c1 = list(combinations(tc_robo1, 5)) \n",
     "c2 = list(combinations(tc_robo2, 5))\n",
     "\n",
     "#resultados para todas as combinaçoes possiveis\n",
@@ -190,9 +191,9 @@
     "\n",
     "#checagem para ver que robô ganhou\n",
     "if max(c1_) > max(c2_):\n",
-    "    print(resultado + \"Robo 1 ganhou\")\n",
+    "    print(resultado + \"\\nRobo 1 ganhou\")\n",
     "elif max(c2_) > max(c1_):\n",
-    "    print(resultado + \"Robo 2 ganhou\")\n",
+    "    print(resultado + \"\\nRobo 2 ganhou\")\n",
     "elif max(c1_) == 1:\n",
     "    \n",
     "    #checagem para carta alta\n",
@@ -206,7 +207,7 @@
     "    else:\n",
     "        print(\"Empate de cartas altas {} e \".format(cartas_alta_robo1[1],cartas_alta_robo2[1]))\n",
     "else:\n",
-    "    print(resultado + \"Empate\")\n"
+    "    print(resultado + \"\\nEmpate\")\n"
    ]
   }
  ],
